--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
         <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <!--        {# Custom CSS#}-->
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
@@ -61,7 +61,7 @@
   </div>
 </nav>
 
-  {# The actual blog posts#}
+<!--  {# The actual blog posts#}-->
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
