--- a/blog_project/blog/templates/blog/post_form.html
+++ b/blog_project/blog/templates/blog/post_form.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>New post</h1>
 
-    <form method="POST" class="post-form">
+    <form method="POST" class="postform">
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit" class="btn btn-primary">Save</button>
